Fix BaselineModuleJvmArgs without toolchains
Otherwise the plugin interacts poorly with
`BaselineReleaseCompatibility` because `--release` and internal
module exports/opens cannot be used at the same time.